# KuroStream

./: .gitattributes  .gitignore  .ktlintrc  .trashed-1786276041-MERGE_REPORT.md  .trashed-1786276042-MERGE_REPORT_2.md  .trashed-1786276042-README.md  ALL_ERRORS_FIXED.md  ALL_ERRORS_FIXED_FINAL.md  CHANGELOG.md  COMPREHENSIVE_OPTIMIZATION_PLAN.md  CROSS_PLATFORM.md  FINAL_ALL_PHASES_COMPLETE.md  FINAL_OPTIMIZATION_REPORT.md  LICENSE  MERGE_REPORT.md  PHASE1_COMPLETE.md  PHASE1_COMPLETE_FINAL_100_100.md  PHASE2_COMPLETE.md  README.md  RELEASE.md  ULTRA_LOW_RAM_OPTIMIZATION.md  ULTRA_OPTIMIZATION_REPORT.md  build.gradle.kts  full_raw_logs.txt  gradle.properties  gradlew  gradlew-fix  gradlew.bat  interactive_heal.sh  isolated_errors.txt  live_heal_workflows.sh  local_heal_workflows.sh  opencode.json  replit.md  settings.gradle.kts  simple_error.txt
.agents/: agent_assets_metadata.toml
.git-rewrite/: backup-refs  commit  heads  index  message  parse  revs
.github/: WORKFLOW_FIXES.md  secrets.md
.opencode/: context.md
app/: build.gradle.kts  detekt.gradle.kts  proguard-rules.pro  spotless.gradle.kts
backup/: build.gradle.kts  consumer-rules.pro
benchmark/: build.gradle.kts
build-logic/: build.gradle.kts
cache/: build.gradle.kts  consumer-rules.pro
common/: build.gradle.kts
core-common/: build.gradle.kts
core-platform/: build.gradle.kts
data/: build.gradle.kts
docs/: AGENTS.md  API_MEMORY_MANAGEMENT.md  ARCHITECTURE_AUDIT.md  ARCHITECTURE_DECISIONS.md  (+8 more)
playback/src/main/cpp/: CMakeLists.txt  MpvRendererJNI.cpp  MpvRendererJNI.h  native_dsp.cpp
(+869 files in other folders)
